feat: implements observability with Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.data.jpa.repositories.enabled=true
 spring.sql.init.mode=always
+management.endpoints.web.exposure.include=health, info, metrics, swagger-ui
+management.endpoint.health.show-details=always
+management.info.env.enabled=true
+management.info.app.name=API de Transferências
+management.info.app.description=API para transferências financeiras
+management.info.app.version=1.0.0
+management.info.metrics.tags.application=transfer-api
+management.metrics.enable.all=true
+spring-doc.show-actuator=true
