--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=transfer-api
 external.validation.api.url=https://util.devi.tools/api/v2/authorize
 external.notify.api.url=https://util.devi.tools/api/v1/notify
-spring.datasource.url=jdbc:mysql://localhost:3306/transfer_bd
+spring.datasource.url=jdbc:mysql://mysql:3306/transfer_bd
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
