--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=transfer-api
-external.validation.api.url=https://util.devi.tools/api/v2/authorize
-external.notify.api.url=https://util.devi.tools/api/v1/notify
+external.authorization.api.url=https://util.devi.tools/api/v2
+external.notify.api.url=https://util.devi.tools/api/v1
 spring.datasource.url=jdbc:mysql://mysql:3306/transfer_bd
 spring.datasource.username=root
 spring.datasource.password=root
